- Added editor modules (components without UI) - Added Directional Light Component and Actor - Shader revamp -> just cleaning up in prep for actually learning about them - Supports 1 directional and 1 point light per obj atm - Rotation fix for getforwardvector

--- a/Flow/Editor/Settings.yaml
+++ b/Flow/Editor/Settings.yaml
@@ -18,3 +18,13 @@ Testing:
 Rendering:
   NearPlane: 0.0500000007
   FarPlane: 500
+  RenderingFlags:
+    Main: true
+    Outline Masking: true
+    Outline: true
+    No Depth: true
+    2D: true
+    UI: true
+    Selection: true
+    Selection2D: true
+    Front Culling: true
