--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1920,1008
+Size=1280,721
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1240,351
-Size=680,400
+Pos=827,256
+Size=453,286
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1240,351
-Size=680,400
+Pos=827,256
+Size=453,286
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1240,351
-Size=680,400
+Pos=827,256
+Size=453,286
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=1238,732
+Size=825,523
 Collapsed=0
 DockId=0x00000007,0
 
@@ -125,7 +125,7 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Selection Tool Config]
-Pos=801,276
+Pos=44,75
 Size=1155,561
 Collapsed=0
 
@@ -135,8 +135,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,753
-Size=944,274
+Pos=0,544
+Size=629,196
 Collapsed=0
 DockId=0x00000002,0
 
@@ -151,14 +151,14 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=946,753
-Size=974,274
+Pos=631,544
+Size=649,196
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Hierarchy]
-Pos=1240,19
-Size=680,330
+Pos=827,19
+Size=453,235
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -173,13 +173,13 @@ Size=1023,192
 Collapsed=0
 
 [Window][World Viewer]
-Pos=1240,351
-Size=680,400
+Pos=827,256
+Size=453,286
 Collapsed=0
 DockId=0x00000010,3
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,1008 Split=Y
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
   DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,480 Split=X
     DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=1238,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
@@ -192,7 +192,7 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,1008 Spli
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,216 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,262 Selected=0xF02CD328
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,262 Selected=0xDC408BFB
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,180 Split=X Selected=0xCB7211A8
     DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=629,210 Selected=0xCB7211A8
     DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=649,210 Selected=0x04985A5E
