--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -60,6 +60,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\YamlCpp\Include;$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source\Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet\Include;$(SolutionDir)Sandbox\Source;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>IMGUI_API=__declspec(dllimport);FLOW_PLATFORM_WINDOWS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4251;</DisableSpecificWarnings>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -76,6 +77,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\YamlCpp\Include;$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source\Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet\Include;$(SolutionDir)Sandbox\Source;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>IMGUI_API=__declspec(dllimport);FLOW_PLATFORM_WINDOWS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
