--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1280,721
+Size=2560,1368
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=758,259
-Size=522,276
+Pos=1515,474
+Size=1045,526
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=758,259
-Size=522,276
+Pos=1515,474
+Size=1045,526
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=758,259
-Size=522,276
+Pos=1515,474
+Size=1045,526
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=756,516
+Size=1513,981
 Collapsed=0
 DockId=0x00000007,0
 
@@ -135,8 +135,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,537
-Size=629,203
+Pos=0,1002
+Size=1259,385
 Collapsed=0
 DockId=0x00000002,0
 
@@ -151,14 +151,14 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=631,537
-Size=649,203
+Pos=1261,1002
+Size=1299,385
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Hierarchy]
-Pos=758,19
-Size=522,238
+Pos=1515,19
+Size=1045,453
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -173,13 +173,13 @@ Size=1023,192
 Collapsed=0
 
 [Window][World Viewer]
-Pos=758,259
-Size=522,276
+Pos=1515,474
+Size=1045,526
 Collapsed=0
 DockId=0x00000010,3
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=Y
   DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,588 Split=X
     DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=756,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
@@ -192,7 +192,7 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,238 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0x96DFAF1A
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0xF02CD328
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,231 Split=X Selected=0xCB7211A8
     DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=629,210 Selected=0xCB7211A8
     DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=649,210 Selected=0x04985A5E
