--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=2560,1368
+Size=1280,721
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1515,474
-Size=1045,526
+Pos=969,259
+Size=311,276
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1515,474
-Size=1045,526
+Pos=969,259
+Size=311,276
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1515,474
-Size=1045,526
+Pos=969,259
+Size=311,276
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=1513,981
+Size=967,516
 Collapsed=0
 DockId=0x00000007,0
 
@@ -135,8 +135,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,1002
-Size=1259,385
+Pos=0,537
+Size=629,203
 Collapsed=0
 DockId=0x00000002,0
 
@@ -151,14 +151,14 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=1261,1002
-Size=1299,385
+Pos=631,537
+Size=649,203
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Hierarchy]
-Pos=1515,19
-Size=1045,453
+Pos=969,19
+Size=311,238
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -173,26 +173,26 @@ Size=1023,192
 Collapsed=0
 
 [Window][World Viewer]
-Pos=1515,474
-Size=1045,526
+Pos=969,259
+Size=311,276
 Collapsed=0
 DockId=0x00000010,3
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=Y
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
   DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,588 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=756,721 Split=Y Selected=0xB32CD986
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=967,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
         DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
       DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=522,721 Split=Y Selected=0xE884D536
+    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=311,721 Split=Y Selected=0xE884D536
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,238 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0xF02CD328
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0x3F488DE8
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,231 Split=X Selected=0xCB7211A8
     DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=629,210 Selected=0xCB7211A8
     DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=649,210 Selected=0x04985A5E
