- Default save file will now create the directory if necessary. - Components are now properly deleted when deleting assets - Skybox components save their texture - Misc cleanup

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -136,7 +136,7 @@ Collapsed=0
 
 [Window][Output]
 Pos=0,537
-Size=629,203
+Size=425,203
 Collapsed=0
 DockId=0x00000002,0
 
@@ -151,8 +151,8 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=631,537
-Size=649,203
+Pos=427,537
+Size=853,203
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -192,8 +192,8 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,238 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0x3F488DE8
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0x96DFAF1A
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,231 Split=X Selected=0xCB7211A8
-    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=629,210 Selected=0xCB7211A8
-    DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=649,210 Selected=0x04985A5E
+    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=425,210 Selected=0xCB7211A8
+    DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=853,210 Selected=0x04985A5E
 
