--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=969,259
-Size=311,276
+Pos=969,261
+Size=311,314
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,13 +31,13 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=969,259
-Size=311,276
+Pos=969,261
+Size=311,314
 Collapsed=0
 DockId=0x00000010,2
 
 [Window][Dear ImGui Demo]
-Pos=242,52
+Pos=515,239
 Size=1501,807
 Collapsed=0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=969,259
-Size=311,276
+Pos=969,261
+Size=311,314
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=967,516
+Size=967,556
 Collapsed=0
 DockId=0x00000007,0
 
@@ -135,10 +135,10 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,537
-Size=425,203
+Pos=0,577
+Size=1280,163
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,0
 
 [Window][Popout]
 Pos=759,123
@@ -151,14 +151,14 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=427,537
-Size=853,203
+Pos=0,577
+Size=1280,163
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000008,1
 
 [Window][Scene Hierarchy]
 Pos=969,19
-Size=311,238
+Size=311,240
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -173,14 +173,99 @@ Size=1023,192
 Collapsed=0
 
 [Window][World Viewer]
-Pos=969,259
-Size=311,276
+Pos=969,261
+Size=311,314
 Collapsed=0
 DockId=0x00000010,3
 
+[Window][Example: Constrained Resize]
+Pos=140,111
+Size=688,220
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=466,311
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=620,734
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Icon_FMesh Properties]
+Pos=1682,1200
+Size=482,111
+Collapsed=0
+
+[Window][ArrowZForward Properties]
+Pos=1676,863
+Size=315,93
+Collapsed=0
+
+[Window][Icon_DirectionalLight Properties]
+Pos=1274,458
+Size=552,137
+Collapsed=0
+
+[Window][Icon_Folder Properties]
+Pos=1309,507
+Size=352,133
+Collapsed=0
+
+[Window][Icon_Light Properties]
+Pos=431,371
+Size=489,159
+Collapsed=0
+
+[Window][Icon_Pause Properties]
+Pos=60,60
+Size=345,133
+Collapsed=0
+
+[Window][Icon_Play Properties]
+Pos=60,60
+Size=338,133
+Collapsed=0
+
+[Window][Icon_Image Properties]
+Pos=60,60
+Size=345,133
+Collapsed=0
+
+[Window][Window_Properties##ArrowZForward Properties]
+Pos=60,60
+Size=387,133
+Collapsed=0
+
+[Window][Arrow Properties##Window_Properties]
+Pos=60,60
+Size=331,133
+Collapsed=0
+
+[Window][Area Properties##Window_Properties]
+Pos=60,60
+Size=324,133
+Collapsed=0
+
+[Window][ArrowZForward Properties##Window_Properties]
+Pos=272,182
+Size=387,133
+Collapsed=0
+
+[Window][###Window_Properties]
+Pos=490,203
+Size=422,133
+Collapsed=0
+
 [Docking][Data]
 DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
-  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,588 Split=X
+  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,1056 Split=X
     DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=967,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
@@ -191,9 +276,7 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,238 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,276 Selected=0x96DFAF1A
-  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,231 Split=X Selected=0xCB7211A8
-    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=425,210 Selected=0xCB7211A8
-    DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=853,210 Selected=0x04985A5E
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,457 Selected=0x9A68760C
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,597 Selected=0x96DFAF1A
+  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,310 Selected=0xCB7211A8
 
