--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Source\Flow\Editor\UIComponents\Console.h" />
     <ClInclude Include="Source\Flow\Editor\Modules\Spawner.h" />
     <ClInclude Include="Source\Flow\Editor\UIComponents\WorldViewer.h" />
+    <ClInclude Include="Source\Flow\Editor\UndoSystem\UndoManager.h" />
     <ClInclude Include="Source\Flow\EntryPoint.h" />
     <ClInclude Include="Source\Flow\Framework\Types\ComPtr.h" />
     <ClInclude Include="Source\Flow\Framework\Utils\DirectX11\DirectX11Utils.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Source\Flow\Framework\Types\Array.h" />
     <ClInclude Include="Source\Flow\Framework\Types\HashString.h" />
     <ClInclude Include="Source\Flow\Framework\Types\String.h" />
+    <ClInclude Include="Source\Flow\Framework\Utils\UndoSystem\ActorUndoEvents.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Bindable.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\BlendState.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Codex.h" />
@@ -378,6 +380,7 @@
     <ClCompile Include="Source\Flow\Framework\Events\Event.cpp" />
     <ClCompile Include="Source\Flow\Framework\Events\KeyEvent.cpp" />
     <ClCompile Include="Source\Flow\Framework\Events\MouseEvent.cpp" />
+    <ClCompile Include="Source\Flow\Framework\Utils\UndoSystem\ActorUndoEvents.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BlendState.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Codex.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\VertexBuffer.cpp" />
