Fixed sprite component implementation
- Fixed selection not being enabled when loading a level
- Fixed Vertex/Index buffer ordering on sprite component.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -75,7 +75,7 @@ Collapsed=0
 DockId=0x00000010,1
 
 [Window][Editor Settings]
-Pos=563,151
+Pos=732,574
 Size=667,401
 Collapsed=0
 
@@ -277,6 +277,6 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,998 Split
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,333 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,435 Selected=0x3F488DE8
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,435 Selected=0x96DFAF1A
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,226 Selected=0xCB7211A8
 
